# todo-demo

./: .gitignore  Makefile  README.md  docker-compose.yml
todo-demo-front/: biome.json  package.json  tsconfig.json
todo-demo-front/src/apis/: client.ts
todo-demo-front/src/features/auth/: AuthContext.tsx  AuthProvider.tsx  queryKeys.ts  types.ts
todo-demo-front/src/features/auth/hooks/: useAuth.ts  useLoginWithDev.ts  useLoginWithGoogle.ts  useLogout.ts  useMe.ts
todo-demo-front/src/features/todos/: queryKeys.ts
todo-demo-front/src/features/todos/components/: AppHeader.tsx  DeleteConfirmDialog.tsx  (+5 more)
todo-demo-front/src/lib/: errorHandling.ts  errorMessages.ts  queryClient.ts
todo-demo-front/src/pages/: _app.tsx  _document.tsx  index.tsx  login.tsx
todo-demo-front/src/pages/todos/: index.tsx
todo-demo-front/src/styles/: globals.css
todo-demo-front/src/theme/: ColorModeContext.tsx  colorModeStorage.ts  index.ts
todo-demo-server/: .env.local.example  .gitignore  Cargo.toml  openapi.json
todo-demo-server/src/: lib.rs  main.rs
todo-demo-server/src/_common/: app_config.rs  app_json.rs  app_state.rs  auth_middleware.rs  handler_helper.rs  jwk_cache.rs  mod.rs
todo-demo-server/src/auth/: _get_me_handler.rs  _post_dev_login_handler.rs  _post_google_handler.rs  _post_logout_handler.rs  mod.rs  model.rs  router.rs
todo-demo-server/src/health/: _get_healthz_handler.rs  mod.rs  router.rs
todo-demo-server/src/todo/: _delete_todo_handler.rs  _get_todo_handler.rs  _get_todos_handler.rs  _post_todo_handler.rs  _put_todo_handler.rs  mod.rs  model.rs  router.rs
(+4 files in other folders)
